[04/05] Update application yml file